ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: vue-service
                port:
                  number: 8080
          - path: /proxy
            pathType: Exact
            backend:
              service:
                name: python-service
                port:
                  number: 5000
          - path: /nginx
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
